Clean up. Don't know why it didn't work after cloning

--- a/debian/rules
+++ b/debian/rules
@@ -9,12 +9,12 @@
 
 override_dh_auto_build:
 	$(MAKE) \
-CDEFS="-DPIPEIN -DDIRED -DPREFIXREGION -DSEARCHALL \
--DLANGMODE_PYTHON -DLANGMODE_CLIKE \
--DUSER_MODES -DUSER_MACROS" \
-COPT="-O3 $(shell pkg-config --cflags ncursesw)" \
-LIBS=$(shell pkg-config --libs ncursesw) \
-clean strip
+	CDEFS="-DPIPEIN -DDIRED -DPREFIXREGION -DSEARCHALL \
+	-DLANGMODE_PYTHON -DLANGMODE_CLIKE \
+	-DUSER_MODES -DUSER_MACROS" \
+	CC=gcc \
+	COPT="-O3 $(shell pkg-config --cflags ncursesw)" \
+	LIBS=$(shell pkg-config --libs ncursesw) clean all strip
 
 override_dh_auto_install:
 	make DESTDIR=$(shell pwd)/debian/mg3a PREFIX=/usr install
