Add sample config directory to package

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 AM_CFLAGS = 
 AM_LDFLAGS =
-
+SUBDIRS = . bl
 OSRCS	= cinfo.c fileio.c spawn.c ttyio.c tty.c ttykbd.c
 SRCS	= basic.c dir.c dired.c file.c line.c match.c paragraph.c \
 	  random.c region.c search.c version.c window.c word.c \
@@ -21,3 +21,4 @@ doc_DATA = README README.debian README.programmer README.ucsnames \
 	README.bindings README.fill-paragraph README.reference README.user_macros \
 	README.bsd README.md README.shell-command README.user_modes \
 	README.clike-mode README.misc README.todo
+
