Add some files from orig/ to doc when packaging/installing

--- a/configure.ac
+++ b/configure.ac
@@ -212,5 +212,5 @@ AC_ARG_ENABLE([maintainer-mode],
     [enable_maintainer_mode=no])
 
 AC_SUBST([AM_CPPFLAGS])
-AC_CONFIG_FILES([Makefile bl/Makefile])
+AC_CONFIG_FILES([Makefile bl/Makefile orig/Makefile])
 AC_OUTPUT
