--- a/debian/control
+++ b/debian/control
@@ -1,21 +1,16 @@
 Source: mg3a
-Section: editors
+Section: unknown
 Priority: optional
-Maintainer: Pedro A. Aranda <paaguti@gmail.com>
-Build-Depends: debhelper (>= 8.0.0), libncursesw6 (>= 6.0)
-Standards-Version: 3.9.4
-Homepage: http://www.bengtl.net/files/mg3a
-#Vcs-Git: git://git.debian.org/collab-maint/mg3a.git
-#Vcs-Browser: http://git.debian.org/?p=collab-maint/mg3a.git;a=summary
+Maintainer: Pedro A. Aranda Gutiérrez <paag@unknown>
+Build-Depends: debhelper-compat (= 13), autotools-dev
+Standards-Version: 4.6.0
+Homepage: <insert the upstream URL, if relevant>
+#Vcs-Browser: https://salsa.debian.org/debian/mg3a
+#Vcs-Git: https://salsa.debian.org/debian/mg3a.git
+Rules-Requires-Root: no
 
 Package: mg3a
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: mg3a: MicroEmacs-based editor with UTF-8 support
-  This is Mg3a, a public domain MicroEMACS-based editor with commands
-  and key-bindings similar to GNU Emacs.  It is a development of the
-  earlier public domain Mg2a editor, with the addition of functions to
-  deal with UTF-8, CRLF/LF line endings, and some other updates.
-  --
-  In addition, allows to pipe form stdin into a special buffer for further
-  editing.
+Description: <insert up to 60 chars description>
+ <insert long description, indented with spaces>
