Makefile.am for compressed READMEs

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-AM_CFLAGS = 
+AM_CFLAGS =
 AM_LDFLAGS =
 SUBDIRS = . bl orig
 OSRCS	= cinfo.c fileio.c spawn.c ttyio.c tty.c ttykbd.c
@@ -16,9 +16,14 @@ mg_SOURCES = $(OSRCS) $(SRCS) $(OINCS) $(INCS)
 bin_PROGRAMS = mg
 
 docdir = $(datadir)/doc/@PACKAGE@
-doc_DATA = README README.debian README.programmer README.ucsnames \
-	README.auto-execute README.dired README.mg3 README.python-mode README.undo \
-	README.bindings README.fill-paragraph README.reference README.user_macros \
-	README.bsd README.md README.shell-command README.user_modes \
-	README.clike-mode README.misc README.todo
+doc_DATA = README
 
+install-data-hook:
+	mkdir -p $(DESTDIR)$(docdir) ; \
+	zip -9rD $(DESTDIR)$(docdir)/READMES.zip \
+		README.debian README.programmer README.ucsnames \
+		README.auto-execute README.dired README.mg3 README.python-mode README.undo \
+		README.bindings README.fill-paragraph README.reference README.user_macros \
+		README.bsd README.md README.shell-command README.user_modes \
+		README.clike-mode README.misc README.todo && \
+	zip -9rD $(DESTDIR)$(docdir)/samples.zip bl/*
