Build mg3a inside the container

--- a/xtras/Dockerfile
+++ b/xtras/Dockerfile
@@ -4,7 +4,7 @@ ARG CACHEBUST=1
 RUN apt update -qq && apt upgrade -y -qq && \
      apt autoremove --purge -y -qq && \
      apt clean -y -qq && \
-     apt install -y -qq zip \
+     apt install -y -qq zip git \
      	 debhelper debmake fakeroot libncursesw5-dev \
      	 autoconf make checkinstall \
      	 dh-autoreconf dh-make dh-strip-nondeterminism && \
